<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grayBg"

    tools:context=".activities.LoginActivity">
    <!-- android:background="@color/blueAube1">

   <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <!--

        android:layout_width="188dp"
            android:layout_height="125dp"
        -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgAube"
            android:src="@mipmap/ic_aube_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/mention_log"
            android:id="@+id/tvWelcome"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textColor="@color/grayTitle"
            android:layout_below="@+id/imgAube"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/mention_log_2"
            android:id="@+id/tvWelcome2"
            android:textColor="@color/grayTitle"
            android:layout_marginTop="5dp"
            android:layout_below="@id/tvWelcome"
            android:layout_alignLeft="@id/tvWelcome"
            android:layout_alignRight="@id/tvWelcome"

            android:gravity="center_horizontal"/>


        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvWelcome2"
            android:layout_marginTop="40dp"
            android:gravity="bottom"
            android:id="@+id/prl_login_email">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_widthPercent ="65%"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/grayFont"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email_login"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:layout_alignBottom="@id/etEmail"
                android:text="@string/email_log"
                android:layout_alignParentStart="true"
                app:layout_widthPercent ="30%"
                android:textColor="@color/grayFont"
                android:layout_toLeftOf="@id/etEmail"/>


        </android.support.percent.PercentRelativeLayout>

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/prl_login_email"
            android:id="@+id/prl_login_pwd">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/etPassword"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:singleLine="true"
                app:layout_widthPercent ="65%"
                android:layout_centerVertical="true"
                android:textColor="@color/grayFont"
                android:layout_alignParentRight="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="16sp"
                android:text="@string/password_log"
                android:layout_alignParentStart="true"
                android:layout_alignBottom="@id/etPassword"
                app:layout_widthPercent ="30%"
                android:id="@+id/tv_pwd_login"
                android:textColor="@color/grayFont"
                android:layout_toLeftOf="@id/etPassword"/><!--android:layout_alignBottom="@id/etPassword"-->


        </android.support.percent.PercentRelativeLayout>
        <!--
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="15"
                    android:hint="@string/email_log"
                    android:textColorHint="#FFFFFF"
                    android:id="@+id/etEmail"

                    android:layout_below="@+id/tvWelcome"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"

                android:background="@drawable/bg_login_et"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="15"
                    android:hint="@string/password_log"
                    android:textColorHint="#FFFFFF"
                    android:id="@+id/etPassword"

                    android:layout_below="@+id/etEmail"
                    android:layout_alignStart="@+id/etEmail"
                    android:background="@drawable/bg_login_et"/>-->


      <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvRegister"
            android:text="@string/register"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/prl_login_pwd"
            android:layout_alignStart="@id/prl_login_pwd"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvForgot"
            android:text="@string/forgot_password"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/prl_login_pwd"
            android:layout_alignEnd="@id/prl_login_pwd"/>-->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/btnLogin"
            android:ems="6"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/prl_login_pwd"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:background="@color/blueBtn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/tvForgot"
            android:text="@string/forgot_password"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"></TextView>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/tvRegister"
            android:ems="6"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tvForgot"
            android:layout_centerHorizontal="true"
            android:background="@color/grayBtn"
            android:layout_marginBottom="20dp"/>
        <!--        android:background="@drawable/bg_login_btn"
        android:textColor="#878787"-->

    </RelativeLayout>



</RelativeLayout>