<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/grayBg"

    tools:context=".activities.LoginActivity">
    <!-- android:background="@color/blueAube1">

   <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toolbar"
        android:background="?attr/colorPrimary"/>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <!--

        android:layout_width="188dp"
            android:layout_height="125dp"
        -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgAube"
            android:src="@mipmap/ic_aube_logo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/provide_email_msg"
            android:id="@+id/tvMsgForgot"
            android:layout_below="@+id/imgAube"
            android:layout_marginTop="20dp"
            android:textColor="@color/grayTitle"
            android:layout_centerHorizontal="true" />


        <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="15"
        android:hint="@string/email_forgot"
        android:textColorHint="#FFFFFF"
        android:id="@+id/etEmailForgot"
        android:background="@drawable/bg_login_et"
        android:layout_below="@+id/tvMsgForgot"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:textColor="#878787"
        android:textSize="18sp"
        android:id="@+id/btnSend"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/etEmailForgot"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_login_btn"
        android:layout_marginBottom="20dp"/>-->

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMsgForgot"
            android:layout_marginTop="40dp"
            android:gravity="bottom"
            android:id="@+id/prl_forgot_email">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etEmailForgot"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceSmall"
                app:layout_widthPercent ="65%"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/grayFont"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email_forgot"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="16sp"
                android:layout_alignBottom="@id/etEmailForgot"
                android:text="@string/email_log"
                android:layout_alignParentStart="true"
                app:layout_widthPercent ="30%"
                android:textColor="@color/grayFont"
                android:layout_toLeftOf="@id/etEmailForgot"/>


        </android.support.percent.PercentRelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:id="@+id/btnSend"
            android:ems="6"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/prl_forgot_email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:background="@color/blueBtn"/>

    </RelativeLayout>

</RelativeLayout>
